--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -14,28 +14,27 @@
         </div>
         <div id="main" class="main"></div>
         <script id="test" type="text/html">
-            <ul>
-                    {{each responseData as value i}}
-                    <li>
-                            <h1 id="country" class="title">{{value.country}}</h1>
-                            {{each value.historyTimeline as timeline j}}
-                            <div id="year" class="year">
-                                    <h2>{{timeline.time}}</h2>
-                                    <div class="list">
-                                        <ul>
-                                            <li class="cls highlight">
-                                                <p id="time" class="date">{{timeline.time}}</p>
-                                                <p id="intro" class="intro">{{timeline.abstract}}</p>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            {{/each}}
-                            
-                    </li>
-                    {{/each}}
             
-        </ul>
+                {{each responseData as value i}}
+               
+                    <h1 id="country" class="title">{{value.country}}</h1>
+                    {{each value.historyTimeline as timeline j}}
+                    <div id="year" class="year">
+                        <h2>{{timeline.time}}</h2>
+                        <div class="list">
+                            <ul>
+                                <li class="cls highlight">
+                                    <p id="time" class="date">{{timeline.time}}</p>
+                                    <a href="detailed.html?id={{timeline.id}}" target="_blank"><p id="intro" class="intro">{{timeline.abstract}}</p></a>    
+                                    <p id="detailed" class="detailed">{{timeline.detailed}}</p>
+                                </li>
+                            </ul>
+                        </div>
+                        </div>
+                    {{/each}}        
+                
+                {{/each}}
+        
         </script>
 
         
@@ -157,69 +156,6 @@
                 var html = template('test', data);
                 document.getElementById('main').innerHTML = html;
                
-                // var line='';
-                // var datacountry='';
-                // var datatime='';
-                // var datadynasty='';
-                // var dataperson='';
-                // var dataabstract='';
-                // var jsonObj = response
-                // for(i=0;i<jsonObj.length;i++){
-                //     line+='<input type="checkbox" id="countrybox'+i+'" class="countrybox"></input>';
-                    
-                //     line+='<h1 id="country'+i+'" class="title"></h1>';
-                //     for(j=0;j<jsonObj[i].historyTimeline.length;j++){
-
-                //         line+='<div id="year'+i+'_'+j+'" class="year">';
-                //         line+='<h2></h2>';
-                //         line+='</div>';
-                //         line+='<div class="list">';
-                //         line+='<ul>';
-                //         line+='<li class="cls highlight">';
-                //         line+='<div id="dynasty'+i+'_'+j+'" class="dynasty">';
-                //         line+='<h2></h2>';
-                //         line+='</div>';
-                //         line+='<div id="person'+i+'_'+j+'" class="person">';
-                //         line+='<h2></h2>';
-                //         line+='</div>';
-                //         line+='<div id="abstract'+i+'_'+j+'" class="abstract">';
-                //         line+='<h2></h2>';
-                //         line+='</div>';
-                //         line+='</li>';
-                //         line+='</ul>';                       
-                //         line+='</div>';
-                        
-                //     }
-                   
-                                    
-                //     console.log(jsonObj[i].country);
-                                                      
-                //     document.getElementById('main').innerHTML=line;
-                                      
-                // }
-
-                // for(i=0;i<jsonObj.length;i++){
-
-                //     datacountry=jsonObj[i].country;
-
-                //     document.getElementById('countrybox'+i).innerHTML=datacountry;
-
-                //     document.getElementById('country'+i).innerHTML=datacountry;
-
-                //     for(j=0;j<jsonObj[i].historyTimeline.length;j++){  
-                        
-                //         datatime=jsonObj[i].historyTimeline[j].time;
-                //         document.getElementById('year'+i+'_'+j).innerHTML=datatime;
-                //         datadynasty=jsonObj[i].historyTimeline[j].dynasty;
-                //         document.getElementById('dynasty'+i+'_'+j).innerHTML=datadynasty;
-
-                //         dataperson=jsonObj[i].historyTimeline[j].person;
-                //         document.getElementById('person'+i+'_'+j).innerHTML=dataperson;
-
-                //         dataabstract=jsonObj[i].historyTimeline[j].abstract;
-                //         document.getElementById('abstract'+i+'_'+j).innerHTML=dataabstract;
-                //     }    
-                // }
             },  
             error:function(){  
                               
